<resources>
    <string name="app_name" translatable="false">Contributions</string>
    <string name="title_activity_display_a_list" translatable="false">Display_a_list</string>
    <string name="title_activity_add_a_contribution" translatable="false">Add_a_contribution</string>
    <string name="member_name_hint">Enter member\'s name</string>
    <string name="authority" translatable="false">com.example.android.hubert.fileProvider</string>
    <string name="share">Share</string>
    <string name="add_contribution_empty">No members available to add to list</string>
    <string name="name_label">Name</string>
    <string name="amount_label">Amount</string>
    <string name="tab_text_1">Members</string>
    <string name="tab_text_2">Contributions</string>
    <string name="action_settings">Settings</string>
    <string name="add_amount">Add Amount</string>
    <string name="subtract_amount">Subtract Amount</string>
    <string name="subtract">Subtract</string>
    <string name="delete">Delete</string>
    <string name="member_name" translatable="false">Njuacha Hubert</string>
    <string name="sample_amount" translatable="false">10,000</string>
    <string name="add">ADD</string>
    <string name="date_created">Date Created :</string>
    <string name="sample_date" translatable="false">12/04/2018</string>
    <string name="number_of_items_in_list">Number Of Items In List :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="choose_a_name">Choose a name</string>
    <string name="date">Date :</string>
    <string name="change_date">Other date</string>
    <string name="enter_an_amount">Enter an amount…</string>
    <string name="summary">Summary</string>
    <string name="edit_name">Edit</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="nameOfList">Name of list</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="explain_member_no_contrib">Has not yet made any contribution</string>
    <string name="no_members_so_add">Tap on the yellow icon at the bottom to add a member</string>
    <string name="no_contrib_so_add">Tap on the yellow icon at the bottom to create a contribution list</string>
    <string name="add_member_contrib">Tap on the yellow icon at the bottom to register a member\'s contribution</string>
    <string name="name_of_member">Name of Member</string>
    <string name="options">Options</string>
    <string name="number_of_contributions_made">Number of Contributions made :</string>
    <string name="contribution_from">Contribution From:</string>
    <string name="recieved_on">Recieved On:</string>
    <string name="adUnitId1" translatable="false">ca-app-pub-2753645322508525/1032980531</string>
    <string name="adUnitIdTest" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adUnitId2" translatable="false">ca-app-pub-2753645322508525/2190095632</string>
    <string name="adUnitId3" translatable="false">ca-app-pub-2753645322508525/4292804353</string>
    <string name="adUnitId4" translatable="false">ca-app-pub-2753645322508525/6039385891</string>
    <string name="adUnitId5" translatable="false">ca-app-pub-2753645322508525/1308258801</string>
    <string name="create_a_group">create a group</string>
    <string name="hint_group_name">Enter the group\'s name here...</string>
    <string name="group_id">groupId</string>
    <string name="groupName">group name</string>
    <string name="groups">Groups</string>
    <string name="name_of_group">Name of Group</string>
    <string name="settings">Settings</string>
    <string name="delete_group">Delete Group</string>
</resources>
