<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.hubert.Activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_group"
        app:showAsAction="never"
        />

</menu>
